--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="photo_5422364068121008391_y.jpg" 
+                <img src="https://polina193535.github.io/Personal-portfolio-website/photo_5422364068121008391_y.jpg" 
                 alt="About" 
                 style="border-radius: 5%;" 
                 class="about-pic" >
@@ -51,7 +51,7 @@
                         <p>0+ years <br > Frontend Development</p>
                     </div>
                     <div class="details-container">
-                        <img src="education.png"
+                        <img src="https://polina193535.github.io/Personal-portfolio-website/education.png"
                         alt="Education icon"
                         class="icon">
                         <h3>Education</h3>
