--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="Personal-portfolio-website/img/medal.png"
+                        <img src="https://github.com/polina193535/Personal-portfolio-website/blob/main/img/medal.png"
                         alt="Experience icon"
                         class="icon" >
                         <h3>Experience</h3>
