--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <section id="profile"> 
         <div class="section__pic-container">
-            <img src="./photo_5422819102726151849_x.jpg" alt="" style="border-radius: 50%;">
+            <img src="https://polina193535.github.io/Personal-portfolio-website/img/photo_5422819102726151849_x.jpg" alt="" style="border-radius: 50%;">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -44,7 +44,7 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="https://github.com/polina193535/Personal-portfolio-website/blob/main/img/medal.png"
+                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/medal.png"
                         alt="Experience icon"
                         class="icon" >
                         <h3>Experience</h3>
@@ -79,7 +79,7 @@
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon" >
                             <div>
@@ -98,7 +98,7 @@
                         </article>
                        
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon">
                             <div>
