--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon" >
                             <div>
@@ -107,7 +107,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon">
                             <div>
@@ -122,7 +122,7 @@
                     <h2 class="experience-sub-title">Backend Development</h2>
                     <div class="article-container">
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon">
                             <div>
@@ -131,7 +131,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon">
                             <div>
@@ -140,7 +140,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="galochka.png"
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
                             alt="Experience icon"
                             class="icon">
                             <div>
@@ -149,7 +149,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="galochka.png" alt="Experience icon" class="icon">
+                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png" alt="Experience icon" class="icon">
                             <div>
                                 <h3>C</h3>
                                 <p>Intermediate</p>
@@ -167,7 +167,7 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="ode1.jpg" alt="project 1" class="project-img" >
+                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/ode1.jpg" alt="project 1" class="project-img" >
                     </div>
                     <h2 class="experience-sub-title project-title">Online Book Store</h2>
                     <div class="bth-container">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="code2.jpg" alt="project 1" class="project-img">
+                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/code2.jpg" alt="project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">FSA to RegExp</h2>
                     <div class="bth-container">
@@ -197,26 +197,26 @@
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="pochta.png" 
+                <img src="https://polina193535.github.io/Personal-portfolio-website/img/pochta.png" 
                 alt="Email icon"
                 class="icon contact-icon"
                 onclick="location.href='mailto:kostikova658@gmail.com'">
                 <p><a href="mailto:kostikova658@gmail.com">kostikova658@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="telegram.png" 
+                <img src="https://polina193535.github.io/Personal-portfolio-website/img/telegram.png" 
                 alt="Telegram"
                 class="icontg"
                 onclick="location.href='https://t.me/Polinnna555'">
             </div>
             <div class="contact-info-container">
-                <img src="vkc.png" 
+                <img src="https://polina193535.github.io/Personal-portfolio-website/img/vkc.png" 
                 alt="VK"
                 class="iconvk"
                 onclick="location.href='https://vk.com/id504012444'">
             </div>
             <div class="contact-info-container">
-                <img src="115899926.png" 
+                <img src="https://polina193535.github.io/Personal-portfolio-website/img/115899926.png" 
                 alt="Github"
                 class="icongit"
                 onclick="location.href='https://github.com/polina193535'">
