--- a/src/comic.html
+++ b/src/comic.html
@@ -53,7 +53,7 @@
     <a href="index.html">Back</a>
     <div id="comicDetails"></div>
     <main></main>
-    <script type="module" src="comic.ts"></script>
+    <script type="module" src="../dist/bundle.js/comic.js"></script>
 </body>
 
 </html>
