--- a/index.html
+++ b/index.html
@@ -1,228 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal portfolio website</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-
-<body>
-    <nav id="desktop-nav">
-        <div class="logo">Personal portfolio website</div>
-        <div>
-            <ul class="nav-links">
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact Me</a></li>
-                <li><a href="comic.html">XKCD Comic</a> </li>
-            </ul>
-        </div>
-    </nav>    
-    <section id="profile">
-        <div class="section__pic-container">
-            <img src="https://polina193535.github.io/Personal-portfolio-website/img/photo_5422819102726151849_x.jpg"
-                alt="" style="border-radius: 50%;">
-        </div>
-        <div class="section__text">
-            <p class="section__text__p1">Hello, I'm</p>
-            <h1 class="title">Polina Kostikova </h1>
-            <p class="section__text__p2">Innopolis University Student</p>
-
-        </div>
-    </section>
-    <section id="about">
-        <p class="section__text__p1">Get To Know More</p>
-        <h1 class="title">About Me</h1>
-        <div class="section-container">
-            <div class="section__pic-container">
-                <img src="https://polina193535.github.io/Personal-portfolio-website/img/photo_5422364068121008391_y.jpg"
-                    alt="About" style="border-radius: 5%;" class="about-pic">
-            </div>
-            <div class="about-details-container">
-                <div class="about-containers">
-                    <div class="details-container">
-                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/medal.png"
-                            alt="Experience icon" class="icon">
-                        <h3>Experience</h3>
-                        <p>0+ years <br> Frontend Development</p>
-                    </div>
-                    <div class="details-container">
-                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/education.png"
-                            alt="Education icon" class="icon">
-                        <h3>Education</h3>
-                        <p>Secondary general<br>education</p>
-                    </div>
-                </div>
-                <div class="text-container">
-                    <p>I am a first year student of Innopolis University. Field of study: Information
-                        systems engineering. I am 19 years old.
-                        All my life I lived in Vladimir,
-                        and now I am in Innopolis. I have already
-                        learned several programming languages and
-                        now I am immersing myself in the world of
-                        front-end development.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="experience">
-        <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-
-                        <article> 
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>TypeScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-
-                    </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Backend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>Java</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>C++</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>Python</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="https://polina193535.github.io/Personal-portfolio-website/img/galochka.png"
-                                alt="Experience icon" class="icon">
-                            <div>
-                                <h3>C</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="projects">
-        <p class="section__text__p1">Browse My Recent</p>
-        <h1 class="title">Projects</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/ode1.jpg"
-                            alt="project 1" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title">Online Book Store</h2>
-                    <div class="bth-container">
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/polina193535/Online-Book-Store'">
-                            Github
-                        </button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="https://polina193535.github.io/Personal-portfolio-website/img/code2.jpg"
-                            alt="project 1" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title">FSA to RegExp</h2>
-                    <div class="bth-container">
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/polina193535/FSA-to-RegExp-Translator'">
-                            Github
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact">
-        <p class="section__text__p1">Get in Touch</p>
-        <h1 class="title">Contact Me</h1>
-        <div class="contact-info-upper-container">
-            <div class="contact-info-container">
-                <img src="https://polina193535.github.io/Personal-portfolio-website/img/pochta.png" alt="Email icon"
-                    class="icon contact-icon" onclick="location.href='mailto:kostikova658@gmail.com'">
-                <p><a href="mailto:kostikova658@gmail.com">kostikova658@gmail.com</a></p>
-            </div>
-            <div class="contact-info-container">
-                <img src="https://polina193535.github.io/Personal-portfolio-website/img/telegram.png" alt="Telegram"
-                    class="icontg" onclick="location.href='https://t.me/Polinnna555'">
-            </div>
-            <div class="contact-info-container">
-                <img src="https://polina193535.github.io/Personal-portfolio-website/img/vkc.png" alt="VK" class="iconvk"
-                    onclick="location.href='https://vk.com/id504012444'">
-            </div>
-            <div class="contact-info-container">
-                <img src="https://polina193535.github.io/Personal-portfolio-website/img/115899926.png" alt="Github"
-                    class="icongit" onclick="location.href='https://github.com/polina193535'">
-            </div>
-        </div>
-    </section>
-    <footer>
-        <nav>
-            <div class="nav-links-container">
-                <ul class="nav-links">
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact Me</a></li>
-                </ul>
-            </div>
-        </nav>
-
-    </footer>
-</body>
-
+  </head>
+  <body>
+    <div id="app"></div> <!--возможно изменить-->
+    <script type="module" src="./src/main.ts"></script>
+  </body>
 </html>
